# face_detection_opencv

./: CMakeLists.txt
console_app/: CMakeLists.txt
console_app/inc/: application.h
console_app/src/: application.cpp  main.cpp
lib_face_detect/: CMakeLists.txt
lib_face_detect/inc/: face_detect_api.h
lib_face_detect/model/: yunet_2023mar.h
lib_face_detect/src/: face_detect.cpp
tests/: CMakeLists.txt  test_lib.cpp
